# Lex-Toolkit

./: .gitignore  ARCHITECTURE.md  PUSH_COMMANDS.md  Pipfile  README.md  docker-compose.yml  embedding_model_decision.md  next_steps_plan.md  pyproject.toml  tasks.md  tests.md
apps/: __init__.py
apps/agent/: Dockerfile  README.md  drafting_graph.py  llm.py  main.py  requirements.txt  research_graph.py  review_graph.py
apps/agent/tools/: __init__.py  pgvector_inspector.py  web_browser.py
apps/api/: Dockerfile  README.md  requirements.txt
apps/api/app/: llm.py  main.py  schemas.py
apps/web/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
apps/web/scripts/: dev.mjs
apps/web/src/: middleware.ts
docs/: README.md  agent_workflow.md  linear_research_sync.md
infra/docker/: README.md
infra/docker/init/: 001_enable_pgvector.sql  002_ingestion_jobs.sql  003_users.sql  004_refresh_tokens.sql
legalscraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: smoke_api.sh
services/: __init__.py
services/data_pipeline/: README.md  build_chunks.py  build_law_source.py  cdmx_law_source.py  cdmx_report.py  debug_empty_cdmx.py  dof_scraper.py  embed_chunks.py  find_missing_docs.py  legal_chunker.py  paths.py  tiktoken_chunking_review.md  tokenize_chunks.py
tests/: conftest.py  test_auth_jwks_route.py  test_auth_keys.py  test_conflict_check_stub.py  test_drafting_api.py  test_ingestion_pipeline.py  test_research_api.py  test_research_graph.py  test_review_api.py  test_workflow_map.py
tests/e2e/: test_pgvector_live.py  test_placeholder.py
(+81 files in other folders)
